@@ -84,7 +84,7 @@ public class ClanPVPKills extends StdCommand
 					for(final Clan.MemberRecord M : foundClan.getMemberList())
 					{
 						if(M.playerpvps > 0)
-							topKillers.add(new Pair<String,Integer>(M.name,new Integer(M.playerpvps)));
+							topKillers.add(new Pair<String,Integer>(M.name,Integer.valueOf(M.playerpvps)));
 					}
 					@SuppressWarnings("unchecked")
 					final Pair<String,Integer>[] killerArray = topKillers.toArray(new Pair[0]);
